# cera

./: .env.example  .gitignore  README.md  docker-compose.yml
cli/: .dockerignore  Dockerfile  README.md  pyproject.toml
cli/cera/: __init__.py  __main__.py  api.py  config_loader.py  logging.py  main.py
cli/cera/config/: aspect-categories.json  domain-patterns-defaults.json  domain-patterns.json  sex-patterns.json  ui-constraints.json
cli/cera/config/custom-aspect-categories/: semeval-15-res-1300.json
cli/cera/export/: __init__.py  exporter.py  formats.py
cli/cera/llm/: __init__.py  mav.py  openrouter.py  usage.py  web_search.py
cli/cera/models/: __init__.py  config.py  output.py
cli/cera/pipeline/: __init__.py  context_extractor.py  executor.py
cli/cera/pipeline/composition/: __init__.py  acm.py  rgm.py  sil.py
cli/cera/pipeline/evaluation/: __init__.py  mdqa.py
cli/cera/pipeline/generation/: __init__.py  aml.py  batch_engine.py  neb.py  noise.py  vocab_tracker.py
cli/cera/prompts/: __init__.py
cli/cera/prompts/aml/: system.md  user.md
cli/cera/prompts/composition/: personas.md  structure_variants.md  writing_patterns.md
cli/cera/prompts/context_extractor/: domain.md  region.md  reviewer.md  subject.md  subject_query.md
cli/cera/prompts/mav/: verify.md
cli/cera/prompts/noise/: inject.md
cli/cera/prompts/rgm/: persona.md
cli/cera/prompts/sil/: answer_queries.md  classify_facts.md  cluster_facts.md  extract.md  generate_queries.md  judge_agreement.md  judge_clustering.md  parametric_only.md  search.md  (+1 more)
cli/cera/utils/: __init__.py
(+106 files in other folders)
