[project]
name = "cera"
version = "0.1.0"
description = "CERA - Context-Engineered Reviews Architecture for synthetic ABSA dataset generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Research Only" }
authors = [
    { name = "Kap Thang", email = "kap@example.com" }
]
keywords = ["ABSA", "NLP", "synthetic data", "reviews", "sentiment analysis"]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "nlpaug>=1.1.0",
    "nltk>=3.8.0",
    "tenacity>=8.2.0",
    "structlog>=23.0.0",
    "pyspellchecker>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
ml = [
    "sentence-transformers>=2.2.0",
    "bert-score>=0.3.13",
    "torch>=2.0.0",
]
search = [
    "tavily-python>=0.3.0",
]

[project.scripts]
cera = "cera.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cera"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
